# TFG-DietPlanner

./: .gitignore  Makefile  dietplanner.sqlite3  docker-compose.yml  pyproject.toml  tasks.py
.circleci/: config.yml  test.yaml
.github/workflows/: allow_words.txt  latex.yaml  pdf.yaml  test.yaml
data/: ingredients.csv  load_data.py  recipes.json
dietplanner/: db.sqlite3  manage.py
dietplanner/app/: buscador.py  configuration.py  db.py  models.py  urls.py  views.py
dietplanner/app/migrations/: 0001_initial.py
dietplanner/app/static/css/: custom.css
dietplanner/app/static/js/: buscador-ingredientes.js
dietplanner/app/templates/: base.html  buscador.html  receta.html  resultados.html
dietplanner/app/tests/: locust.py  tests.py
dietplanner/dietplanner/: asgi.py  settings.py  urls.py  wsgi.py
doc/: bibliografia.bib  glosario.tex  proyecto.tex
doc/Secciones/: 01_Introduccion.tex  02_Estado_del_arte.tex  03_Metodologia.tex  04_Implementacion.tex  04_Planificacion.tex  04_diseño.tex  04_implementacion.tex  05_Implementacion.tex  06_Encontrar_recetas.tex  06_Fuente_recetas.tex  07_prototipo.tex  08_Pruebas.tex  09_despliegue.tex  10_costes.tex  11_conclusiones.tex
doc/apendices/: 12_Anexo_BD.tex  13_Anexo_prototipo.tex  14_Anexo_pruebas.tex
doc/portada/: portada.tex
doc/prefacios/: prefacio.tex
scripts/: pdf.sh  spell_check.sh
src/: buscador.py  configuration.py  db.py  load_data.py  models.py
tests/: test.py
