[tool.poetry]
name = "tfg-dietplanner"
version = "0.1.0"
description = ""
authors = ["Alejandro Olivares <a.olivaresdelrey.pierres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
invoke = "^2.1.3"
pytest = "^7.4.3"
python-decouple = "^3.8"
django = "^4.2.7"
pytest-django = "^4.6.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dietplanner.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
